# maze-3d

./: GEMINI.md  Makefile  README.md  main.py  pyproject.toml
assets/shaders/vert/: instancing.vs
src/way/: game.py  maze.py  player.py
way/: asset.py  game.py  main.py  maze.py  player.py  scene.py
way/components/: __init__.py  abstract.py  compass.py  logical.py  maze.py  minimap.py  mixins.py  models.py
way/debug/: __init__.py
way/debug/scene/: __init__.py  abstract.py  game_end.py  game_play.py  main_menu.py  protocols.py
way/game/: __init__.py  state.py
way/maze/: __init__.py  generators.py  state.py
way/scene/: __init__.py  abstract.py  constants.py  end.py  game_end.py  game_play.py  main_menu.py  manager.py  maze_play.py  protocols.py  state.py  utils.py
