[project]
name = "way"
version = "0.1.0"
description = "A 3D first-person maze game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "raylib>=6.0.1.0",
    "ruff>=0.15.16",
    "pyright>=1.1.410",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN"]
ignore = ["I001"]

[tool.pyright]
include = ["way"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
